Mise à jour du projet : ajout grid, flex et accessibilité

--- a/attractions.html
+++ b/attractions.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Passer au contenu principal</a>
     <nav>
     <ul>
       <li><a href="index.html">Accueil</a></li>
@@ -14,9 +15,9 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <main>
+  <main id="main-content">
     <h1>Attractions touristiques à Paris</h1>
-        <div class="images">
+        <div class="grid">
         <img src="images/tour.jpg" alt="La Tour Eiffel">
         <img src="images/dame.jpg" alt="La dame"> 
         <img src="images/img1.jpg" alt="">   
