--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+  <a href="#main-content" class="skip-link"></a>
   <main>
     <h1>Contactez-nous</h1>
     <form>
